--- a/package.json
+++ b/package.json
@@ -3,12 +3,11 @@
   "description": "UI for watching exasol sessions",
   "version": "0.0.1",
   "author": "Demeter Sztanko <sztanko@gmail.com>",
-  "bugs": "https://github.com/KyleAMathews/coffee-react-quickstart/issues",
   "devDependencies": {
-    "cjsx-loader": "^1.1.0",
-    "coffee-loader": "^0.7.2",
-    "coffee-react-transform": "^2.1.0",
-    "coffee-script": "^1.8.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^6.4.1",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-react": "^6.24.1",
     "css-loader": "^0.9.0",
     "gulp": "^3.8.10",
     "gulp-compass": "^2.0.3",
@@ -18,7 +17,6 @@
     "gulp-shell": "^0.2.11",
     "gulp-size": "^1.1.0",
     "gulp-util": "^3.0.1",
-    "jest-cli": "^0.2.1",
     "map-stream": "0.0.5",
     "react-hot-loader": "^1.0.0-alpha.3",
     "react-retina-image": "^1.1.0",
@@ -29,46 +27,26 @@
     "webpack-dev-server": "^1.6.6"
   },
   "dependencies": {
-    "lodash": "2.4.1",
     "d3": "3.5.2",
-    "react": "^0.12.1",
-    "react-router": "^0.11.6",
     "highlight.js": "^8.4.0",
     "jquery": "^2.1.3",
+    "lodash": "2.4.1",
     "moment": "2.8.4",
+    "react": "^0.12.1",
+    "react-router": "^0.11.6",
     "react-widgets": "2.1.0"
-},
-  "homepage": "https://github.com/KyleAMathews/coffee-react-quickstart",
-  "jest": {
-    "scriptPreprocessor": "<rootDir>/preprocessor.js",
-    "unmockedModulePathPatterns": [
-      "<rootDir>/node_modules/react"
-    ],
-    "testFileExtensions": [
-      "coffee",
-      "js",
-      "cjsx"
-    ],
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "coffee",
-      "cjsx"
-    ]
   },
+  "homepage": "https://github.com/sztanko/exaquery",
   "keywords": [
     "react",
     "react-tools",
     "quickstart",
-    "coffeescript",
-    "cjsx"
+    "jsx"
   ],
   "license": "MIT",
-  "main": "server.coffee",
-  "repository": "git@github.com:KyleAMathews/coffee-react-quickstart.git",
+  "repository": "https://github.com/sztanko/exaquery.git",
   "scripts": {
     "start": "./node_modules/.bin/gulp watch",
-    "build": "./node_modules/.bin/gulp build",
-    "test": "jest"
+    "build": "./node_modules/.bin/gulp build"
   }
 }
