--- a/ui/package.json
+++ b/ui/package.json
@@ -8,7 +8,7 @@
     "babel-loader": "^6.4.1",
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
-    "css-loader": "^0.9.0",
+    "css-loader": "^1.0.0",
     "gulp": "^3.8.10",
     "gulp-compass": "^2.0.3",
     "gulp-cssfont64": "0.0.1",
@@ -20,7 +20,7 @@
     "map-stream": "0.0.5",
     "react-hot-loader": "^1.0.0-alpha.3",
     "react-retina-image": "^1.1.0",
-    "style-loader": "^0.8.2",
+    "style-loader": "^0.23.1",
     "touch": "0.0.3",
     "underscore": "^1.7.0",
     "webpack": "^1.4.13",
@@ -29,6 +29,7 @@
   "dependencies": {
     "d3": "3.5.2",
     "highlight.js": "^8.4.0",
+    "http-server": "^0.11.1",
     "jquery": "^2.1.3",
     "lodash": "2.4.1",
     "moment": "2.8.4",
