--- a/ui/package.json
+++ b/ui/package.json
@@ -8,6 +8,7 @@
     "babel-loader": "^6.4.1",
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
+    "case-sensitive-paths-webpack-plugin": "^2.1.2",
     "css-loader": "^1.0.0",
     "gulp": "^3.8.10",
     "gulp-compass": "^2.0.3",
@@ -18,6 +19,7 @@
     "gulp-size": "^1.1.0",
     "gulp-util": "^3.0.1",
     "map-stream": "0.0.5",
+    "progress-bar-webpack-plugin": "^1.11.0",
     "react-hot-loader": "^1.0.0-alpha.3",
     "react-retina-image": "^1.1.0",
     "style-loader": "^0.23.1",
