--- a/ui/package.json
+++ b/ui/package.json
@@ -10,6 +10,7 @@
     "babel-preset-react": "^6.24.1",
     "case-sensitive-paths-webpack-plugin": "^2.1.2",
     "css-loader": "^1.0.0",
+    "d3": "^3.5.2",
     "gulp": "^3.8.10",
     "gulp-compass": "^2.0.3",
     "gulp-cssfont64": "0.0.1",
@@ -18,10 +19,17 @@
     "gulp-shell": "^0.2.11",
     "gulp-size": "^1.1.0",
     "gulp-util": "^3.0.1",
+    "highlight.js": "^8.4.0",
+    "jquery": "^2.1.3",
+    "lodash": "2.4.1",
     "map-stream": "0.0.5",
+    "moment": "2.8.4",
     "progress-bar-webpack-plugin": "^1.11.0",
+    "react": "^0.12.1",
     "react-hot-loader": "^1.0.0-alpha.3",
     "react-retina-image": "^1.1.0",
+    "react-router": "^0.11.6",
+    "react-widgets": "2.1.0",
     "style-loader": "^0.23.1",
     "touch": "0.0.3",
     "underscore": "^1.7.0",
@@ -29,15 +37,7 @@
     "webpack-dev-server": "^1.6.6"
   },
   "dependencies": {
-    "d3": "3.5.2",
-    "highlight.js": "^8.4.0",
-    "http-server": "^0.11.1",
-    "jquery": "^2.1.3",
-    "lodash": "2.4.1",
-    "moment": "2.8.4",
-    "react": "^0.12.1",
-    "react-router": "^0.11.6",
-    "react-widgets": "2.1.0"
+    "node-static": "^0.7.11"
   },
   "homepage": "https://github.com/sztanko/exaquery",
   "keywords": [
