--- a/ui/package.json
+++ b/ui/package.json
@@ -16,6 +16,7 @@
     "gulp-cssfont64": "0.0.1",
     "gulp-load-plugins": "^0.8.0",
     "gulp-rename": "^1.2.0",
+    "gulp-sequence": "^1.0.0",
     "gulp-shell": "^0.2.11",
     "gulp-size": "^1.1.0",
     "gulp-util": "^3.0.1",
