--- a/backend/config/exaquery.yaml
+++ b/backend/config/exaquery.yaml
@@ -1,6 +1,6 @@
 name: exaquery
 granularity: 150
-threshold: 5
+threshold: 10
 base:
   queries: |
     select
@@ -17,6 +17,9 @@ base:
         where sq.start_time < from_posix_time({{ stop_time }}) and sq.stop_time >= from_posix_time({{ start_time }})
         and (ss.logout_time is null or ss.logout_time >= from_posix_time({{start_time}})) 
         and ss.login_time <= from_posix_time({{stop_time}})
+        {% if q  %}
+        and (LOWER(sq.sql_text) LIKE '%{{q}}%' or LOWER(sq.error_text) LIKE '%{{q}}%')
+        {% endif %}
   sessions: |
       select
           concat(ss.user_name,' ', ss.host,' ', os_user) as gr,
@@ -29,6 +32,9 @@ base:
       from 
           EXA_DBA_AUDIT_SESSIONS ss
       where ss.login_time between from_posix_time({{start_time}}) and from_posix_time({{stop_time}})
+      {% if q  %}
+        and (ss.error_text LIKE '%{{q}}%')
+        {% endif %}
   base: |
       select * from sessions
       UNION ALL 
@@ -41,13 +47,19 @@ info:
         from EXA_DBA_AUDIT_SQL sq
             left join EXA_DBA_AUDIT_SESSIONS ss on ss.session_id = sq.session_id
     where 
-        ss.session_id={{box_id.split("_")[1]}} 
-        and sq.stmt_id={{box_id.split("_")[2]}} 
-        AND COMMAND_CLASS='{{box_id.split("_")[0]}}'
+        ss.session_id={{box_id.split("_")[1]}}
+        {% if box_id.split("_")[0] != 'SESSIONSTART' %}
+            and sq.stmt_id={{box_id.split("_")[2]}} 
+            AND COMMAND_CLASS='{{box_id.split("_")[0]}}'
+        {% endif %}
+    order by sq.session_id, sq.stmt_id
   profile: |
     SELECT *
         FROM "$EXA_PROFILE_LAST_DAY"
         WHERE session_id={{box_id.split("_")[1]}}
             AND stmt_id ={{box_id.split("_")[2]}}
+             {% if box_id.split("_")[0] != 'SESSIONSTART' %}
+                AND stmt_id ={{box_id.split("_")[2]}}
+                {% endif %}
             
-        ORDER BY part_id ASC
+        ORDER BY stmt_id, part_id ASC
