--- a/ui/package.json
+++ b/ui/package.json
@@ -12,11 +12,12 @@
     "moment-precise-range-plugin": "^1.3.0",
     "react": "^16.7.0",
     "react-d3-axis": "^0.1.1",
+    "react-datetime-picker": "^2.1.1",
     "react-dom": "^16.7.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-router5": "^7.0.2",
-    "react-scripts": "2.1.1",
+    "react-scripts": "^2.1.3",
     "react-table": "^6.8.6",
     "router5": "^7.0.1"
   },
