--- a/ui/package.json
+++ b/ui/package.json
@@ -2,7 +2,7 @@
   "name": "app",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
+  "devDependencies": {
     "chai": "^4.2.0",
     "d3-scale": "^2.1.2",
     "d3-time-format": "^2.1.3",
@@ -10,6 +10,7 @@
     "moment": "^2.23.0",
     "moment-es6": "^1.0.0",
     "moment-precise-range-plugin": "^1.3.0",
+    "node-sass": "^4.11.0",
     "react": "^16.7.0",
     "react-d3-axis": "^0.1.1",
     "react-datetime-picker": "^2.1.1",
@@ -19,7 +20,8 @@
     "react-router5": "^7.0.2",
     "react-scripts": "^2.1.3",
     "react-table": "^6.8.6",
-    "router5": "^7.0.1"
+    "router5": "^7.0.1",
+    "sass-loader": "^7.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -35,9 +37,5 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ],
-  "devDependencies": {
-    "node-sass": "^4.11.0",
-    "sass-loader": "^7.1.0"
-  }
+  ]
 }
