--- a/ui/package.json
+++ b/ui/package.json
@@ -11,10 +11,10 @@
     "moment-es6": "^1.0.0",
     "moment-precise-range-plugin": "^1.3.0",
     "node-sass": "^4.11.0",
-    "react": "^16.7.0",
+    "react": "^16.12.0",
     "react-d3-axis": "^0.1.1",
     "react-datetime-picker": "^2.1.1",
-    "react-dom": "^16.7.0",
+    "react-dom": "^16.12.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-router5": "^7.0.2",
@@ -37,5 +37,10 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "dependencies": {
+    "react-data-table-component": "^6.1.1",
+    "reactable": "^1.1.0",
+    "styled-components": "^4.4.1"
+  }
 }
